Update version of ruby

--- a/_posts/2018-07-01-welcome.md
+++ b/_posts/2018-07-01-welcome.md
@@ -1,16 +1,19 @@
 ---
-title: Welcome
-tags: TeXt
+title: Blog sur le DDD et l'Architecture Logicielle
+tags: Brouillon
+date: 2023-10-15
 ---
 
-If you see this page, that means you have setup your site. enjoy! :ghost: :ghost: :ghost:
+# 🚧 Page en Construction 🚧
 
-You may want to [config the site](https://kitian616.github.io/jekyll-TeXt-theme/docs/en/configuration) or [writing a post](https://kitian616.github.io/jekyll-TeXt-theme/docs/en/writing-posts) next. Please feel free to [create an issue](https://github.com/kitian616/jekyll-TeXt-theme/issues) or [send me email](mailto:kitian616@outlook.com) if you have any questions.
+Bienvenue sur mon blog dédié au **Domain-Driven Design (DDD)** et à l'**architecture logicielle**.
 
-<!--more-->
+Ce site est actuellement en cours de développement. Je travaille activement pour vous fournir prochainement du contenu de qualité sur ces sujets passionnants.
 
----
+## À venir
 
-If you like TeXt, don't forget to give me a star. :star2:
+- Articles détaillés sur le DDD
+- Bonnes pratiques en architecture logicielle
+- Tutoriels et exemples concrets
 
-[![Star This Project](https://img.shields.io/github/stars/kitian616/jekyll-TeXt-theme.svg?label=Stars&style=social)](https://github.com/kitian616/jekyll-TeXt-theme/)
+Restez connecté pour ne rien manquer !
